--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: codable
 description: A library for converting dynamic, structured data (JSON, YAML) into Dart types.
-version: 1.0.0
+version: 1.0.0-beta
 homepage: https://github.com/stablekernel/dart-codable
 author: stable|kernel <jobs@stablekernel.com>
 
@@ -9,9 +9,6 @@ environment:
 
 dependencies:
   meta: ^1.1.4
-  cast:
-    git:
-      url: https://github.com/joeconwaystk/cast.git
 
 dev_dependencies:
   test: ^0.12.30
