--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,10 +5,9 @@ homepage: https://github.com/stablekernel/dart-codable
 author: stable|kernel <jobs@stablekernel.com>
 
 environment:
-  sdk: '>=2.0.0 <3.0.0'
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
-  meta: ^1.1.5
 
 dev_dependencies:
-  test: ^1.3.0
+  test: ^1.16.4
